Implement message handling and testing